clusters/shire/apps/quizmon/database/mongo-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: quizmon-mongo
  namespace: quizmon
spec:
  entryPoints:
    - mongo
  routes:
    - match: HostSNI(`quizmon-mongo.raveh.dev`)
      services:
        - name: quizmon-mongo-rs0
          port: 27017
          serversTransport: quizmon-mongo
          tls: true
  tls:
    secretName: quizmon-mongo-public-tls
